# price-per-person

./: Dockerfile  main.py  pyproject.toml
test/: test_main.py
