[tool.poetry]
name = "app"
version = "0.1.0"
description = "Program that calculates the price to be paid per person based on the total price, the number of people and the tip."
authors = ["arena <arenaferreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
